attempt to fix navbar line break on certain iOS devices / navbar on alpha

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -52,6 +52,7 @@
 #navbar nav {
     display: inline-block;
     margin: 0 auto;    
+    min-width: 530px;
 }
 
 #navbar nav ul {
